# zifor

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/: tree.cpp
src/zifor/: __init__.py  forest.py  tree.cpp
tests/: __init__.py  test_tree.py  tree.py
zifor/: forest.py
